<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>digital-nursing-platform</artifactId>
    <version>3.9.0</version>
    <name>digital-nursing-platform</name>
    <description>digital-nursing-platform</description>
    <parent>
        <artifactId>digital-nursing</artifactId>
        <groupId>com.luruoyang</groupId>
        <version>3.9.0</version>
    </parent>
    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- Common 依赖 -->
        <dependency>
            <groupId>com.luruoyang</groupId>
            <artifactId>digital-nursing-common</artifactId>
        </dependency>

        <!-- Knife4j 依赖 -->
        <dependency>
            <groupId>com.github.xiaoymin</groupId>
            <artifactId>knife4j-spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

        <dependency>
            <groupId>com.luruoyang</groupId>
            <artifactId>digital-nursing-qianfan</artifactId>
        </dependency>
    </dependencies>
</project>
